--- a/resource/style.css
+++ b/resource/style.css
@@ -1,1 +1,17 @@
-body {}
+.section-a-1{
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(165, 24, 24, 0.65) ), color-stop(59%, rgba(160, 28, 28, 0.5)), color-stop(100%, rgba(165, 24, 24, 0))), url('../resource/images/tnw-livestream.jpg') no-repeat;
+    max-width: 50%;
+    height: 300px;
+}
+
+.section-a-2{
+    background: url('../resource/images/conference.jpg') no-repeat;
+    height: 300px;
+}
+
+.section-a-3{
+    background: url('../resource/images/bumble-founder.jpg') no-repeat;
+    height: 300px;
+}
+
+
