--- a/resource/style.css
+++ b/resource/style.css
@@ -69,16 +69,68 @@
     height: 500px;
 }
 
-/* Mobile Display Starts Here */
 
+/* desktop view */
 
-.nav-1 , .nav-2, .nav-2-right{
+.nav-1 {
+    background-color: black;
+    color: whitesmoke;
+    padding: 20px 25px;
+}
+
+.nav-1 a {
+    color: gray;
+    text-decoration: none;
+    padding-right: 15px;
+}
+
+.nav-1 a:hover {
+    color: white;
+}
+
+.nav-2 {
+    background-color: rgb(254, 254, 254);
+    padding: 20px 40px 20px 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.nav-2 a {
+    color: gray;
+    text-decoration: none;
+    padding-right: 15px;
+}
+
+.nav-2 a:hover {
+    color: white;
+}
+
+.nav-2-right {
+    float: right;
+    border-left: 1px solid gray;
+    padding: 0 25px;
+}
+
+#logo1 {
+    /* margin: 20px 5px; */
+    width: 125px;
+    height: 16px;
+}
+
+.hide-menu {
     display: none;
 }
 
-.mobile-logo-image{
-    /* background:linear-gradient(to bottom right , rgb(215,59,113), rgb(236,64,52)); */
-    background-color: blue;
-    height: 100px;
-    width: 100px;
+.nav-2-right span {
+    padding-right: 15px;
+    color: gray;
+}
+
+.nav-2-right button {
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: rgb(87, 202, 202);
+    color: white;
+    cursor: pointer;
 }
