--- a/resource/style.css
+++ b/resource/style.css
@@ -71,11 +71,15 @@
 
 
 /* desktop view */
+.nav-bar{
+}
+
 
 .nav-1 {
     background-color: black;
     color: whitesmoke;
     padding: 20px 25px;
+    
 }
 
 .nav-1 a {
@@ -91,19 +95,18 @@
 .nav-2 {
     background-color: rgb(254, 254, 254);
     padding: 20px 40px 20px 20px;
-    position: fixed;
+    position: sticky;
     top: 0;
-    width: 100%;
 }
 
 .nav-2 a {
-    color: gray;
+    color: rgb(178, 178, 178);
     text-decoration: none;
     padding-right: 15px;
 }
 
 .nav-2 a:hover {
-    color: white;
+    color: black;
 }
 
 .nav-2-right {
@@ -134,3 +137,10 @@
     color: white;
     cursor: pointer;
 }
+
+.nav-3{
+    width: 100%;
+    background-color: rgb(252, 221, 76);
+    padding: 10px 0 10px 20px;
+}
+
