--- a/resource/style.css
+++ b/resource/style.css
@@ -71,15 +71,13 @@
 
 
 /* desktop view */
-.nav-bar{
-}
 
+.nav-bar {}
 
 .nav-1 {
     background-color: black;
     color: whitesmoke;
-    padding: 20px 25px;
-    
+    padding: 20px 20px 20px 120px;
 }
 
 .nav-1 a {
@@ -94,9 +92,11 @@
 
 .nav-2 {
     background-color: rgb(254, 254, 254);
-    padding: 20px 40px 20px 20px;
+    padding: 20px 20px 20px 120px;
     position: sticky;
     top: 0;
+    box-shadow: 0 0 32px rgba(0, 0, 0, 0.15);
+    font-size: 12px;
 }
 
 .nav-2 a {
@@ -112,7 +112,7 @@
 .nav-2-right {
     float: right;
     border-left: 1px solid gray;
-    padding: 0 25px;
+    padding: 0 0 0 20px;
 }
 
 #logo1 {
@@ -138,9 +138,33 @@
     cursor: pointer;
 }
 
-.nav-3{
+.nav-3 {
     width: 100%;
+    display: block;
     background-color: rgb(252, 221, 76);
-    padding: 10px 0 10px 20px;
+    padding: 10px 20px 10px 120px;
+    position: sticky;
+    top: 48px;
+    color: #000;
+    font-size: 14px;
+    box-shadow: 0 16px 48px #00000026;
 }
 
+.logo-top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 106px;
+    background-color: #f42;
+    background: linear-gradient(to bottom right, #c09, #f42 85%);
+    text-align: center;
+    z-index: 9;
+}
+
+.logo-top img {
+    width: 70px;
+    height: 35px;
+    padding: 10px 0 10px 0;
+    z-index: 9;
+    vertical-align: middle;
+}
