--- a/resource/style.css
+++ b/resource/style.css
@@ -1,6 +1,3 @@
-
-
-
 /* .section-b-main-div {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -102,7 +99,6 @@
 }
 
 #logo1 {
-    /* margin: 20px 5px; */
     width: 125px;
     height: 16px;
 }
@@ -125,7 +121,6 @@
 }
 
 .nav-3 {
-    width: 100%;
     display: block;
     background-color: rgb(252, 221, 76);
     padding: 10px 20px 10px 120px;
@@ -155,15 +150,14 @@
     vertical-align: middle;
 }
 
+
 /* Headline Section Starts here */
 
-.section-a{
+.section-a {
     display: grid;
-    grid-template-columns: 2fr 1fr ;
+    grid-template-columns: 2fr 1fr;
     grid-template-rows: 270px 270px;
-    grid-template-areas: 
-    "a b"
-    "a c" ;
+    grid-template-areas: "a b" "a c";
     grid-gap: 10px;
 }
 
@@ -178,7 +172,6 @@
     background: url('../resource/images/conference.jpg') no-repeat;
     grid-area: b;
     background-size: cover;
-    
 }
 
 .section-a-3 {
@@ -187,37 +180,38 @@
     background-size: cover;
 }
 
-#resize{
+#resize {
     width: 500px;
     height: 200px;
     padding-bottom: 100px;
-
 }
 
-.insights{
+.insights {
     color: white;
     font-size: 20px;
 }
 
-.section-a-1 h1{
+.section-a-1 h1 {
     color: white;
     font-size: 60px;
     font-weight: bold;
     padding-top: 10px;
     line-height: 1.1;
 }
-.written-by{
+
+.written-by {
     color: rgb(148, 148, 148);
     padding-top: 10px;
 }
 
-.space-image{
+.space-image {
     padding-left: 10px;
     padding-right: 5px;
     vertical-align: middle;
 }
 
-.section-a-2, .section-a-3 {
+.section-a-2,
+.section-a-3 {
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
@@ -225,9 +219,60 @@
     padding: 10px;
 }
 
-.section-a-2 h1, .section-a-3 h1{
+.section-a-2 h1,
+.section-a-3 h1 {
     color: white;
     padding-top: 10px;
     font-size: 24px;
     font-weight: bold;
+}
+
+.section-b {
+    margin: 0 auto;
+    width: 80%;
+    padding-top: 40px;
+}
+
+.section-b-main-div {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 200px 200px;
+    grid-column-gap: 25px;
+    grid-row-gap: 30px;
+}
+
+.section-b h1 {
+    font-size: 30px;
+    color: rgb(237, 64, 51);
+    font-weight: bold;
+    padding: 10px 0 20px 0;
+}
+
+.section-b-main-div a {
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    line-height: 1.2;
+}
+
+.section-b-main-div a:hover {
+    text-decoration: underline;
+    color: rgb(237, 64, 51);
+}
+
+.section-b-main-div p {
+    color: rgb(179, 179, 179);
+    font-size: 12px;
+    padding-top: 5px;
+}
+
+.section-b-main-div p a {
+    color: rgb(179, 179, 179);
+    font-size: 12px;
+    padding-right: 4px;
+}
+
+.section-b-main-div p a:hover {
+    text-decoration: none;
+    color: rgb(36, 35, 35);
 }
