--- a/resource/style.css
+++ b/resource/style.css
@@ -241,11 +241,18 @@
     grid-row-gap: 30px;
 }
 
-.section-b h1 {
+.heading-style {
     font-size: 30px;
     color: rgb(237, 64, 51);
     font-weight: bold;
     padding: 10px 0 20px 0;
+    text-decoration: none;
+}
+
+.heading-style:hover{
+    color: black;
+    cursor: pointer;
+    
 }
 
 .section-b-main-div a {
@@ -275,4 +282,64 @@
 .section-b-main-div p a:hover {
     text-decoration: none;
     color: rgb(36, 35, 35);
+}
+
+/* Funding Section Starts here */
+.section-c {
+    margin: 0 auto;
+    width: 80%;
+    padding-top: 60px;
+}
+
+.small-info{
+    float: right;
+    padding: 8px 0 8px 0;
+   
+}
+
+.small-info a{
+    text-decoration: none;
+    color: rgb(237, 64, 51);
+    padding-right: 10px;
+    padding-left: 10px;
+    border-right: solid 1px  rgb(237, 64, 51);
+}
+
+.small-info a:last-child{
+    border: none;
+}
+
+.small-info a:hover{
+    color: black;
+}
+
+.section-c-2{
+    padding-top: 25px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 25px;
+    
+}
+
+.section-c-2 p{
+    padding: 10px;
+    color: rgb(113, 113, 113);
+    font-size: 14px;
+    line-height: 1.5;
+}
+
+.funding-1 , .funding-2 ,.funding-3 , .funding-4{
+    background-color: rgb(254, 250, 248)
+}
+.section-c-2 p img {
+    padding-right: 10px; 
+
+}
+#partners{
+    padding: 0 0 0 40px;
+}
+
+.section-c-2 .border-top{
+    padding-top:15px;
+    border-top: solid 1px  rgb(247, 197, 189) ;
 }
