--- a/resource/style.css
+++ b/resource/style.css
@@ -4,56 +4,12 @@
     grid-template-rows: 200px 200px;
 } */
 
-.headline-1 {
-    background: url('../resource/images/headline1.png') no-repeat;
-    width: 500px;
-    height: 500px;
-}
-
-.headline-2 {
-    background: url('../resource/images/headline2.png') no-repeat;
-    width: 500px;
-    height: 500px;
-}
-
-.headline-3 {
-    background: url('../resource/images/headline3.png') no-repeat;
-    width: 500px;
-    height: 500px;
-}
-
-.headline-4 {
-    background: url('../resource/images/headline4.png') no-repeat;
-    width: 500px;
-    height: 500px;
-}
-
-.headline-5 {
-    background: url('../resource/images/headline5.png') no-repeat;
-    width: 500px;
-    height: 500px;
-}
-
-.headline-6 {
-    background: url('../resource/images/headline6.png') no-repeat;
-    width: 500px;
-    height: 500px;
-}
-
-.headline-7 {
-    background: url('../resource/images/headline7.png') no-repeat;
-    width: 500px;
-    height: 500px;
-}
-
-.headline-8 {
-    background: url('../resource/images/headline8.png') no-repeat;
-    width: 500px;
-    height: 500px;
-}
-
 
 /* desktop view */
+
+* {
+    box-sizing: border-box;
+}
 
 .nav-bar {}
 
@@ -249,10 +205,9 @@
     text-decoration: none;
 }
 
-.heading-style:hover{
+.heading-style:hover {
     color: black;
     cursor: pointer;
-    
 }
 
 .section-b-main-div a {
@@ -284,62 +239,149 @@
     color: rgb(36, 35, 35);
 }
 
+
 /* Funding Section Starts here */
+
 .section-c {
     margin: 0 auto;
     width: 80%;
     padding-top: 60px;
 }
 
-.small-info{
+.small-info {
     float: right;
     padding: 8px 0 8px 0;
-   
 }
 
-.small-info a{
+.small-info a {
     text-decoration: none;
     color: rgb(237, 64, 51);
     padding-right: 10px;
     padding-left: 10px;
-    border-right: solid 1px  rgb(237, 64, 51);
+    border-right: solid 1px rgb(237, 64, 51);
 }
 
-.small-info a:last-child{
+.small-info a:last-child {
     border: none;
 }
 
-.small-info a:hover{
+.small-info a:hover {
     color: black;
 }
 
-.section-c-2{
+.section-c-2 {
     padding-top: 25px;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 25px;
-    
 }
 
-.section-c-2 p{
+.section-c-2 p {
     padding: 10px;
     color: rgb(113, 113, 113);
     font-size: 14px;
     line-height: 1.5;
 }
 
-.funding-1 , .funding-2 ,.funding-3 , .funding-4{
+.funding-1,
+.funding-2,
+.funding-3,
+.funding-4 {
     background-color: rgb(254, 250, 248)
 }
-.section-c-2 p img {
-    padding-right: 10px; 
 
+.section-c-2 p img {
+    padding-right: 10px;
 }
-#partners{
+
+#partners {
     padding: 0 0 0 40px;
 }
 
-.section-c-2 .border-top{
-    padding-top:15px;
-    border-top: solid 1px  rgb(247, 197, 189) ;
+.section-c-2 .border-top {
+    padding-top: 15px;
+    border-top: solid 1px rgb(247, 197, 189);
+}
+
+.section-d {
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.headlines {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 700px 700px 700px;
+    grid-gap: 20px;
+    justify-content: end;
+    padding: 30px 0 0 0;
+}
+
+.headline-1 {
+    background: url('../resource/images/headline1.png') no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 250px;
+}
+
+.headline-2 {
+    background: url('../resource/images/headline2.png') no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 250px;
+}
+
+.headline-3 {
+    background: url('../resource/images/headline3.png') no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 250px;
+}
+
+.headline-4 {
+    background: url('../resource/images/headline4.png') no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 250px;
+}
+
+.headline-5 {
+    background: url('../resource/images/headline5.png') no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 250px;
+}
+
+.headline-6 {
+    background: url('../resource/images/headline6.png') no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 250px;
+}
+
+.headline-7 {
+    background: url('../resource/images/headline7.png') no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 250px;
+}
+
+.headline-8 {
+    background: url('../resource/images/headline8.png') no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 250px;
+}
+
+.main-headline-1 {
+    background-color: red;
+}
+
+.main-headline-2 {
+    background-color: blue
+}
+
+.main-headline-3 {
+    background-color: yellow;
 }
