--- a/resource/style.css
+++ b/resource/style.css
@@ -36,6 +36,7 @@
     top: 0;
     box-shadow: 0 0 32px rgba(0, 0, 0, 0.15);
     font-size: 12px;
+    z-index: 10;
 }
 
 .nav-2 a {
@@ -85,6 +86,7 @@
     color: #000;
     font-size: 14px;
     box-shadow: 0 16px 48px #00000026;
+    z-index: 10;
 }
 
 .logo-top {
@@ -184,13 +186,18 @@
 }
 
 .section-b {
-    margin: 0 auto;
+    padding-top: 60px;
+}
+
+.section-b h1 {
     width: 80%;
-    padding-top: 40px;
+    margin: 0 auto;
 }
 
 .section-b-main-div {
     display: grid;
+    margin: 0 auto;
+    width: 80%;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 200px 200px;
     grid-column-gap: 25px;
@@ -243,8 +250,6 @@
 /* Funding Section Starts here */
 
 .section-c {
-    margin: 0 auto;
-    width: 80%;
     padding-top: 60px;
 }
 
@@ -269,11 +274,17 @@
     color: black;
 }
 
+.section-c-1 {
+    width: 80%;
+    margin: 0 auto;
+}
+
 .section-c-2 {
-    padding-top: 25px;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 25px;
+    width: 80%;
 }
 
 .section-c-2 p {
@@ -287,7 +298,8 @@
 .funding-2,
 .funding-3,
 .funding-4 {
-    background-color: rgb(254, 250, 248)
+    background-color: rgb(254, 250, 248);
+    position: relative;
 }
 
 .section-c-2 p img {
@@ -304,18 +316,17 @@
 }
 
 .section-d {
-    width: 80%;
-    margin: 0 auto;
-    padding: 0;
+    padding: 50px 0 0 0;
 }
 
 .headlines {
+    width: 80%;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 700px 700px 700px;
     grid-gap: 20px;
     justify-content: end;
-    padding: 30px 0 0 0;
 }
 
 .headline-1 {
@@ -374,14 +385,8 @@
     height: 250px;
 }
 
-.main-headline-1 {
-    background-color: red;
-}
+.main-headline-1 {}
 
-.main-headline-2 {
-    background-color: blue
-}
+.main-headline-2 {}
 
-.main-headline-3 {
-    background-color: yellow;
-}
+.main-headline-3 {}
