--- a/resource/style.css
+++ b/resource/style.css
@@ -666,7 +666,54 @@
         border-left: 1px solid lightgray;
         padding-left: 20px;
     }
-    
+}
+
+
+/* Media Query for 1020px */
+@media only screen and (max-width: 1020px){
+    .section-b-main-div {
+        display: grid;
+        margin: 0 auto;
+        width: 80%;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        grid-column-gap: 25px;
+        grid-row-gap: 30px;
+    }
+    .section-c-2 {
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        grid-gap: 20px;
+        width: 80%;
+    }
+    .headlines {
+        width: 80%;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        grid-gap: 20px;
+    }
+    .latest-main {
+        display: grid;
+        margin: 0 auto;
+        max-width: 80%;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        grid-column-gap: 25px;
+        grid-row-gap: 40px;
+        padding: 30px 0 100px 0;
+    }
+
+    .section-c-1 .heading-style{
+        font-size: 26px;
+    }
+
+
 
 }
+
+
 
